test/error/PreElseElse.fu
public static class Test
{
	public static bool Run()
	{
#if false
#else
		return true;
#else //ERROR: '#else' after '#else'
#endif
	}
}
